# zerodha-summary

./: .gitignore  LICENSE  LInks.txt  README.md  SETUP.md  config.ini.template  pyproject.toml  requirements.txt  scheduler.sh  screenshot_to_pdf_mailer.py
zerodha_summary/: __init__.py  mailer.py
