[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerodha-summary"
version = "0.2.0"
description = "Screenshot Zerodha portfolio pages, compile to PDF, and email it"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ramanarayana", email = "raam.soft@gmail.com"}
]
keywords = ["zerodha", "portfolio", "pdf", "screenshot", "email"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "img2pdf>=0.5.0",
]

[project.scripts]
zerodha-summary = "zerodha_summary.mailer:main"

[project.urls]
Homepage = "https://github.com/ramnar/zerodha-summary"

[tool.hatch.build.targets.wheel]
packages = ["zerodha_summary"]
